Create User Model and some xaml code

--- a/StepByStep Application/StepByStep Application.csproj
+++ b/StepByStep Application/StepByStep Application.csproj
@@ -12,8 +12,6 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
-  <ItemGroup>
-    <Folder Include="ViewModels\" />
-  </ItemGroup>
+  <ProjectExtensions><VisualStudio><UserProperties /></VisualStudio></ProjectExtensions>
 
 </Project>
